# hermes

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build.ps1  config.yaml  hermes-dev.spec  pyproject.toml  run.py  run_cli.py
docs/: ARCHITECTURE.md  CONVENTIONS.md  DEVLOG.md  PACKAGING.md  PRD.md  ROADMAP.md
docs/adr/: 0001-record-architecture-decisions.md  0002-ui-shell-and-language.md  0003-model-provider-abstraction.md  0004-multimodal-scope.md  0005-tools-and-agent-loop.md  0006-multimodal-input.md  0007-vision-preprocessing-fallback.md  0008-session-persistence-sqlite.md  0009-context-budget-and-compression.md  0010-agent-screenshot-tool.md  (+9 more)
scripts/: check_compression.py  diag_blockE.py  diag_blockG.py  diag_blockH.py  diag_design_review.py  mcp_echo_server.py
tests/: test_affected_tests.py  test_autoretry.py  test_cache.py  test_changes.py  test_checkpoint.py  test_cli.py  test_codeindex.py  test_config_keys.py  test_contract.py  test_conventions.py  test_conversation.py  test_delegate.py  test_design_review.py  test_diagnose.py  test_encoding_guard.py  test_eval.py  test_evaluators.py  test_feature_flags.py  test_fixture.py  test_fs_rw.py  test_git.py  test_golden.py  test_hooks.py  test_ignore.py  test_learning.py  test_limits.py  test_model_profiles.py  test_model_select.py  test_notes.py  test_p3.py  test_p4.py  test_p4_vision.py  test_p5_blobs.py  test_p5_screenshot.py  test_p6_context.py  test_p6_mcp.py  test_p6_memory.py  test_p6_store.py  test_paths.py  test_permissions.py  (+18 more)
web/: app.js  icons.js  index.html  pure.js  style.css
(+84 files in other folders)
