[project]
name = "hermes-dev"
version = "3.51.0"
description = "A configurable, multimodal coding agent that runs on Windows."
requires-python = ">=3.11"
dependencies = [
    "pywebview>=5.0",
    "anthropic>=0.40",
    "openai>=1.40",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
    "pillow>=10.0",
    "mcp>=1.2",
    "pytest>=7.0",   # 编辑后跑定向测试（FR-13.C）默认运行器：保证 pytest 风格测试随处可跑、不假通过
    # macOS：pywebview 用系统 WKWebView 需 pyobjc（显式声明，避免个别环境 pywebview 未自动拉取）
    "pyobjc-core>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-WebKit>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
hermes-dev = "agentcore.app:main"
hermes-cli = "agentcore.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
